# mrcpmod

./: CMakeLists.txt  README.md  config.ini
src/libs/ini/: IniParser.cpp  IniParser.h
src/log/: Log.h
src/recog/: RecogEngine.cpp  RecogEngine.h  Recognize.cpp  Recognize.h  TencentRecognize.cpp  TencentRecognize.h
src/synth/: SynthEngine.cpp  SynthEngine.h  Synthesizer.cpp  Synthesizer.h  TencentSynthesizer.cpp  TencentSynthesizer.h
